--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="This is my portfolio site.">
+    <mata name="keywords" content="bolt, bootstrap, portfolio">
     <title>Bolt - Free Bootstrap 3 Theme</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
@@ -12,8 +14,123 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    test
 
+    <header class="header">
+        <div class="header__inner inner clearfix">
+            <a class="header__logo" href>
+                <i class="fa fa-bolt fa-4x"></i>
+            </a>
+            <div class="nav-toggle">
+                <div class="nav__link">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="header__menu">
+                <a class="header__btn" href>Contact</a>
+            </div>
+        </div>
+    </header>
+
+    <div class="keyvisual">
+        <div class="keyvisual__inner inner">
+            <div class="keyvisual__title">
+                <h1>Bolt Theme</h1>
+            </div>
+            <div class="keyvisual__caption">
+                <p>FREE BOOTSTRAP THEMES</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="what">
+        <div class="what__inner inner clearfix">
+            <div class="grid">
+                <div class="grid__col grid__col-5">
+                    <div class="what__img"></div>
+                </div>
+                <div class="grid__col grid__col-7">
+                    <div class="what__txt">
+                        <div class="what__title">
+                            <h2>WHAT WE CAN DO?</h2>
+                        </div>
+                        <div class="what__caption">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="work">
+        <div class="work__inner inner">
+            <div class="work__title">
+                <h2>OUR LATEST WORK</h2>
+            </div>
+            <ul class="work__img__list">
+                <li><a class="work__img is-top img__01" href></a></li>
+                <li><a class="work__img is-top img__02" href></a></li>
+                <li><a class="work__img is-top img__03" href></a></li>
+                <li><a class="work__img is-bottom img__04" href></a></li>
+                <li><a class="work__img is-bottom img__05" href></a></li>
+                <li><a class="work__img is-bottom img__06" href></a></li>
+            </ul>
+            <div class="work__bottom">
+                <div class="grid">
+                    <div class="grid__col grid__col-7">
+                        <div class="work__caption wb">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's   standard dummy text ever.</p>
+                        </div>
+                    </div>
+                    <div class="grid__col grid__col-3">
+                        <a class="mail wb" href>Email Me!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <div class="skill__inner inner">
+            <div class="skill__title">
+                <h2>OUR SKILLS</h2>
+            </div>
+            <ul>
+                <li class="skill__img javacripts">JavaScript</li>
+                <li class="skill__img bootstrap">BootStrap</li>
+                <li class="skill__img wordpress">WordPress</li>
+                <li class="skill__img photoshop">PhotoShop</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="sns">
+        <div class="sns__inner inner">
+            <ul class="sns__list">
+                <li><a class="sns__link is__facebook" href>
+                    <i class="fa fa-facebook fa-4x"></i>
+                </a></li>
+                <li><a class="sns__link is__dribbble" href>
+                    <i class="fa fa-dribbble fa-4x"></i>
+                </a></li>
+                <li><a class="sns__link is__twitter" href>
+                    <i class="fa fa-twitter fa-4x"></i>
+                </a></li>
+                <li><a class="sns__link is__mail" href>
+                    <i class="fa fa-envelope fa-4x"></i>
+                </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <div class="footer__inner inner">
+            <p>Crafted with <i class="fa fa-heart"></i> by BlackTie.co.</p>
+        </div>
+    </footer>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
