bolt第二回レビュー

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="header">
         <div class="header__inner inner clearfix">
-            <a class="header__logo" href>
+            <a class="header__logo transition" href>
                 <i class="fa fa-bolt fa-4x"></i>
             </a>
             <div class="nav-toggle">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="header__menu">
-                <a class="header__btn" href>Contact</a>
+                <a class="header__btn transition" href>Contact</a>
             </div>
         </div>
     </header>
@@ -36,10 +36,12 @@
     <div class="keyvisual">
         <div class="keyvisual__inner inner">
             <div class="keyvisual__title">
-                <h1>Bolt Theme</h1>
+                <h1>Bolt</h1>
+                <h1>Theme</h1>
             </div>
             <div class="keyvisual__caption">
-                <p>FREE BOOTSTRAP THEMES</p>
+                <p>FREE BOOTSTRAP</p>
+                <p>THEMES</p>
             </div>
         </div>
     </div>
@@ -70,12 +72,12 @@
                 <h2>OUR LATEST WORK</h2>
             </div>
             <ul class="work__img__list">
-                <li><a class="work__img is-top img__01" href></a></li>
-                <li><a class="work__img is-top img__02" href></a></li>
-                <li><a class="work__img is-top img__03" href></a></li>
-                <li><a class="work__img is-bottom img__04" href></a></li>
-                <li><a class="work__img is-bottom img__05" href></a></li>
-                <li><a class="work__img is-bottom img__06" href></a></li>
+                <li><a class="is-top transition" href><img src="img/01.jpg"></a></li>
+                <li><a class="is-top transition" href><img src="img/02.jpg"></a></li>
+                <li><a class="is-top transition" href><img src="img/03.jpg"></a></li>
+                <li><a class="is-bottom transition" href><img src="img/04.jpg"></a></li>
+                <li><a class="is-bottom transition" href><img src="img/05.jpg"></a></li>
+                <li><a class="is-bottom transition" href><img src="img/06.jpg"></a></li>
             </ul>
             <div class="work__bottom">
                 <div class="grid">
@@ -85,7 +87,7 @@
                         </div>
                     </div>
                     <div class="grid__col grid__col-3">
-                        <a class="mail wb" href>Email Me!</a>
+                        <a class="mail wb transition" href>Email Me!</a>
                     </div>
                 </div>
             </div>
@@ -98,10 +100,10 @@
                 <h2>OUR SKILLS</h2>
             </div>
             <ul>
-                <li class="skill__img javacripts">JavaScript</li>
-                <li class="skill__img bootstrap">BootStrap</li>
-                <li class="skill__img wordpress">WordPress</li>
-                <li class="skill__img photoshop">PhotoShop</li>
+                <li class="skill__img"><img src="img/circle_01.png">JavaScript</li>
+                <li class="skill__img"><img src="img/circle_02.png">BootStrap</li>
+                <li class="skill__img"><img src="img/circle_03.png">WordPress</li>
+                <li class="skill__img"><img src="img/circle_04.png">PhotoShop</li>
             </ul>
         </div>
     </div>
@@ -109,17 +111,17 @@
     <div class="sns">
         <div class="sns__inner inner">
             <ul class="sns__list">
-                <li><a class="sns__link is__facebook" href>
-                    <i class="fa fa-facebook fa-4x"></i>
+                <li><a class="sns__link transition" href>
+                    <i class="fa fa-facebook sns__icon"></i>
                 </a></li>
-                <li><a class="sns__link is__dribbble" href>
-                    <i class="fa fa-dribbble fa-4x"></i>
+                <li><a class="sns__link transition" href>
+                    <i class="fa fa-dribbble sns__icon"></i>
                 </a></li>
-                <li><a class="sns__link is__twitter" href>
-                    <i class="fa fa-twitter fa-4x"></i>
+                <li><a class="sns__link transition" href>
+                    <i class="fa fa-twitter sns__icon"></i>
                 </a></li>
-                <li><a class="sns__link is__mail" href>
-                    <i class="fa fa-envelope fa-4x"></i>
+                <li><a class="sns__link transition" href>
+                    <i class="fa fa-envelope sns__icon"></i>
                 </a></li>
             </ul>
         </div>
